// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DrawingToolButtonGroup should render correctly 1`] = `
<div>
  <div
    class="flux"
  >
    <div
      class="container"
      id="left-Preview"
      title="Camera Preview"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container active"
      id="left-Cursor"
      title="Select (V)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Photo"
      title="Image (I)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Text"
      title="Text (T)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Element"
      title="Elements (E)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Rectangle"
      title="Rectangle (M)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Ellipse"
      title="Oval (C)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Polygon"
      title="Polygon"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Line"
      title="Line (\\)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Pen"
      title="Pen (P)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-AiGenerate"
      title="AI Create"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Generator"
      title="Generators"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <span
          aria-label="appstore"
          class="anticon anticon-appstore"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="appstore"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="separator"
    />
    <div
      class="container beamy"
      id="left-Beamy"
      title="Beamy"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
  </div>
</div>
`;

exports[`test DrawingToolButtonGroup should render correctly when in pass through mode 1`] = `
<div>
  <div
    class="flux"
  >
    <div
      class="container"
      id="left-Preview"
      title="Camera Preview"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container active"
      id="left-Cursor"
      title="Select (V)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Photo"
      title="Image (I)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Text"
      title="Text (T)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Element"
      title="Elements (E)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Rectangle"
      title="Rectangle (M)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Ellipse"
      title="Oval (C)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Polygon"
      title="Polygon"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Line"
      title="Line (\\)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Pen"
      title="Pen (P)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-AiGenerate"
      title="AI Create"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Generator"
      title="Generators"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <span
          aria-label="appstore"
          class="anticon anticon-appstore"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="appstore"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="container"
      id="left-PassThrough"
      title="Passthrough"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="separator"
    />
    <div
      class="container beamy"
      id="left-Beamy"
      title="Beamy"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
  </div>
</div>
`;
